# QT_CPP

./: Doc.txt  README.md
LibraryInventoryTracker/: CMakeLists.txt  libraryinventory.cpp  libraryinventory.h  main.cpp
project_001/: CMakeLists.txt  main.cpp  test.cpp  test.h
